--- a/app/src/main/res/layout/item_item.xml
+++ b/app/src/main/res/layout/item_item.xml
@@ -51,7 +51,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/edit"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                tools:text="@sample/smartphones.json/data/score"/>
+                tools:text="@sample/smartphones.json/data/score"
+                tools:textColor="@sample/smartphones.json/data/color"/>
 
             <ImageView
                 android:id="@+id/edit"
