Build first screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="text_primary">#111111</color>
     <color name="text_secondary">#444444</color>
+
+    <color name="background">#f0f0f0</color>
 </resources>
