--- a/app/src/main/res/layout/templates_fragment.xml
+++ b/app/src/main/res/layout/templates_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@color/grey_100"
     tools:context=".template.TemplatesFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -25,7 +25,6 @@
         android:id="@+id/templates"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
