--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#008577</color>
-    <color name="color_primary_dark">#00574B</color>
-    <color name="color_accent">#d81b60</color>
+    <color name="primary">@color/orange_500</color>
+    <color name="primary_dark">@color/orange_700</color>
+    <color name="accent">@color/green_300</color>
 
     <color name="text_primary">#111111</color>
     <color name="text_secondary">#444444</color>
 
-    <color name="background">#f0f0f0</color>
+    <color name="five_percent_transparency_white">#0Dffffff</color>
+    <color name="ten_percent_transparency_white">#1Affffff</color>
+    <color name="twenty_percent_transparency_white">#33ffffff</color>
+    <color name="thirty_percent_transparency_white">#4Dffffff</color>
+    <color name="fifty_percent_transparency_white">#80ffffff</color>
+    <color name="sixty_percent_transparency_white">#99ffffff</color>
+    <color name="seventy_percent_transparency_white">#B3ffffff</color>
+    <color name="eighty_percent_transparency_white">#CCffffff</color>
+    <color name="ninty_percent_transparency_white">#E6ffffff</color>
+    <color name="ninty_five_percent_transparency_white">#F2ffffff</color>
 
-    <color name="white">#ffffff</color>
+    <color name="fifty_percent_transparency_primary">#80ff9800</color>
+    <color name="fifty_percent_transparency_darker_primary_dark">#80f57c00</color>
 </resources>
