--- a/app/src/main/res/layout/page_item.xml
+++ b/app/src/main/res/layout/page_item.xml
@@ -13,11 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="@string/attr_name"
         android:textSize="@dimen/text_big_18"
         app:layout_constraintEnd_toStartOf="@+id/rating"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Lorem ipsum"/>
 
     <EditText
         android:id="@+id/comment"
@@ -27,11 +27,11 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/comment_bg"
         android:inputType="textMultiLine"
-        android:text="@string/attr_comment"
         android:textSize="@dimen/text_medial_14"
         app:layout_constraintEnd_toStartOf="@+id/rating"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"/>
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:text="dolor sit amet"/>
 
     <com.shawnlin.numberpicker.NumberPicker
         android:id="@+id/rating"
