--- a/app/src/main/res/layout/template_detail_fragment.xml
+++ b/app/src/main/res/layout/template_detail_fragment.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,37 +16,13 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/nameTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/template_name_hint"
-                android:textSize="@dimen/text_big_18"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <EditText
-                android:id="@+id/name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/comment_bg"
-                android:inputType="textMultiLine"
-                android:textSize="@dimen/text_medial_14"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nameTitle"
-                tools:text="Smartphones"/>
-
-            <TextView
                 android:id="@+id/attributesTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/template_data_hint"
+                android:text="@string/template_data_title"
                 android:textSize="@dimen/text_big_18"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <EditText
                 android:id="@+id/attributes"
@@ -56,14 +31,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/comment_bg"
+                android:gravity="start|top"
+                android:hint="@string/template_data_hint"
                 android:inputType="textMultiLine"
-                android:minLines="5"
+                android:minLines="7"
                 android:textSize="@dimen/text_medial_14"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/attributesTitle"
-                tools:lines="7"
-                tools:text="##Performance\nCPU\nRAM\nStorage\n##Screen\nResolution\nScreen size"/>
+                app:layout_constraintTop_toBottomOf="@+id/attributesTitle"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
