--- a/app/src/main/res/menu/menu_apply.xml
+++ b/app/src/main/res/menu/menu_apply.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_edit"
+        android:icon="@drawable/ic_edit_white_24dp"
+        android:title="@string/edit"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_apply"
         android:icon="@drawable/ic_check_white_24dp"
         android:title="@string/apply"
