--- a/app/src/main/res/drawable/ic_add_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_add_white_24dp.xml
@@ -2,10 +2,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="24dp"
         android:height="24dp"
-        android:tint="#FFFFFF"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+        android:viewportWidth="24"
+        android:viewportHeight="24">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+        android:fillColor="@color/primary"
+        android:pathData="M18 13l-5 0 0 5c0 0.55 -0.45 1 -1 1l0 0c-0.55 0 -1 -0.45 -1 -1l0 -5 -5 0C5.45 13 5 12.55 5 12l0 0c0 -0.55 0.45 -1 1 -1l5 0 0 -5c0 -0.55 0.45 -1 1 -1l0 0c0.55 0 1 0.45 1 1l0 5 5 0c0.55 0 1 0.45 1 1l0 0c0 0.55 -0.45 1 -1 1z"/>
 </vector>
