--- a/app/src/main/res/drawable/ic_table_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_table_white_24dp.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24.0" android:viewportWidth="24.0"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M4,11h5L9,5L4,5v6zM4,18h5v-6L4,12v6zM10,18h5v-6h-5v6zM16,18h5v-6h-5v6zM10,11h5L15,5h-5v6zM16,5v6h5L21,5h-5z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+    <path
+        android:fillColor="@color/grey_white_1000"
+        android:pathData="M5 11l3 0c0.55 0 1 -0.45 1 -1L9 6C9 5.45 8.55 5 8 5L5 5C4.45 5 4 5.45 4 6l0 4c0 0.55 0.45 1 1 1zm0 7l3 0c0.55 0 1 -0.45 1 -1L9 13C9 12.45 8.55 12 8 12l-3 0c-0.55 0 -1 0.45 -1 1l0 4c0 0.55 0.45 1 1 1zm6 0l3 0c0.55 0 1 -0.45 1 -1l0 -4c0 -0.55 -0.45 -1 -1 -1l-3 0c-0.55 0 -1 0.45 -1 1l0 4c0 0.55 0.45 1 1 1zm6 0l3 0c0.55 0 1 -0.45 1 -1l0 -4c0 -0.55 -0.45 -1 -1 -1l-3 0c-0.55 0 -1 0.45 -1 1l0 4c0 0.55 0.45 1 1 1zm-6 -7l3 0c0.55 0 1 -0.45 1 -1L15 6C15 5.45 14.55 5 14 5l-3 0c-0.55 0 -1 0.45 -1 1l0 4c0 0.55 0.45 1 1 1zm5 -5l0 4c0 0.55 0.45 1 1 1l3 0c0.55 0 1 -0.45 1 -1L21 6C21 5.45 20.55 5 20 5l-3 0c-0.55 0 -1 0.45 -1 1z"/>
 </vector>
