--- a/app/src/main/res/drawable/card_bg_selected.xml
+++ b/app/src/main/res/drawable/card_bg_selected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/primary"/>
+    <solid android:color="@color/accent"/>
     <stroke
         android:width="1dp"
         android:color="@color/grey_500"/>
