--- a/app/src/main/res/layout/template_detail_fragment.xml
+++ b/app/src/main/res/layout/template_detail_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp">
+    android:background="@color/grey_white_1000"
 
     <ScrollView
         android:layout_width="match_parent"
