--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">@color/orange_500</color>
-    <color name="primary_dark">@color/orange_700</color>
-    <color name="accent">@color/green_300</color>
+    <color name="primary">@color/grey_white_1000</color>
+    <color name="primary_dark">@color/grey_300</color>
+    <color name="accent">@color/orange_500</color>
 
     <color name="text_primary">#111111</color>
     <color name="text_secondary">#444444</color>
