--- a/app/src/main/res/layout/template_detail_fragment.xml
+++ b/app/src/main/res/layout/template_detail_fragment.xml
@@ -1,45 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
     android:background="@color/grey_white_1000"
+    android:padding="@dimen/padding_medium">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/attributesTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/template_data_title"
-                android:textSize="@dimen/text_big_18"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/attributes"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/comment_bg"
                 android:gravity="start|top"
-                android:hint="@string/template_data_hint"
+                android:hint="@string/template_data_title"
                 android:inputType="textMultiLine"
                 android:minLines="7"
-                android:textSize="@dimen/text_medial_14"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/attributesTitle"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:text="@string/template_data_hint"
+                android:textSize="@dimen/text_medial_14"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
